<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">
       <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="horizontal"
               android:padding="16dp"
               android:paddingStart="16dp"
            >
           <ImageView
                   android:layout_width="50dp"
                   android:layout_height="50dp"
                   android:src="@drawable/basketball"
                   android:layout_marginEnd="3dp"
           />
           <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:textStyle="bold"
                   android:textColor="@color/collorBlack"
                   android:text="@string/basketball_league"
                   android:textSize="24sp"
                   android:layout_gravity="center"
                   android:layout_marginStart="5dp"
                   android:fontFamily="casual"
           />
       </LinearLayout>
       <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/today_match"
               android:textColor="@color/collorBlack"
               android:layout_marginTop="16dp"
               android:layout_marginStart="16dp"
               android:textSize="20sp"
               android:textStyle="bold"
       />
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="3dp"
                android:gravity="center"
                android:orientation="horizontal"
        >
         <EditText
                 android:id="@+id/edt_team_a"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:layout_marginStart="3dp"
                 android:layout_marginEnd="5dp"
                 android:layout_gravity="center"
                 android:hint="@string/team_a"
         />
            <EditText
                android:id="@+id/edt_team_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="3dp"
                android:layout_gravity="center"
                android:hint="@string/team_b"
        />
        </LinearLayout>
    <Button
            android:id="@+id/btn_match_begin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="16dp"
            android:text="@string/match_begin"
            android:textColor="@color/colorwhite"
            style="@style/Widget.AppCompat.Button.Colored"
    />
    <ImageView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:src="@drawable/basketballplayer"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="3dp"
    />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/previous_match"
            android:textColor="@color/collorBlack"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:textSize="30sp"
            android:textStyle="bold"
    />
    <!--<android.support.constraint.ConstraintLayout android:layout_width="match_parent"-->
                                                 <!--android:layout_height="match_parent"-->

                                                 <!--android:visibility="gone">-->
        <!--<TextView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:id="@+id/text_team_a" app:layout_constraintStart_toStartOf="parent"-->
                <!--android:layout_marginStart="8dp" app:layout_constraintEnd_toStartOf="@+id/text_team_b"-->
                <!--app:layout_constraintHorizontal_bias="0.378"-->
                <!--android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"-->
                <!--android:textAlignment="center" android:textStyle="bold"/>-->
        <!--<TextView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:id="@+id/text_team_b"-->
                <!--app:layout_constraintStart_toEndOf="@+id/text_team_a"-->
                <!--android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"-->
                <!--app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"-->
                <!--android:textAlignment="center" android:textStyle="bold"/>-->
        <!--<TextView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:id="@+id/textVS" android:layout_marginTop="8dp"-->
                <!--app:layout_constraintTop_toBottomOf="@+id/text_team_a" app:layout_constraintEnd_toEndOf="parent"-->
                <!--android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"-->
                <!--android:layout_marginStart="8dp" android:visibility="invisible" android:text="VS"/>-->
        <!--<TextView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:id="@+id/text_scoreteamA" android:layout_marginTop="8dp"-->
                <!--app:layout_constraintTop_toBottomOf="@+id/textVS" app:layout_constraintStart_toStartOf="parent"-->
                <!--android:layout_marginStart="8dp"-->
                <!--app:layout_constraintEnd_toStartOf="@+id/text_scoreteamB" android:layout_marginEnd="8dp"-->
                <!--app:layout_constraintHorizontal_bias="0.5" android:textStyle="bold"/>-->
        <!--<TextView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:id="@+id/text_scoreteamB" android:layout_marginTop="8dp"-->
                <!--app:layout_constraintTop_toBottomOf="@+id/textVS" app:layout_constraintEnd_toEndOf="parent"-->
                <!--android:layout_marginEnd="8dp" app:layout_constraintStart_toEndOf="@+id/text_scoreteamA"-->
                <!--app:layout_constraintHorizontal_bias="0.5" android:textStyle="bold"/>-->
    <!--</android.support.constraint.ConstraintLayout>-->

    <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_match"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
</LinearLayout>
